<!--

    This file is part of the CRISTAL-iSE Development Module.
    Copyright (c) 2001-2017 The CRISTAL Consortium. All rights reserved.

    This library is free software; you can redistribute it and/or modify it
    under the terms of the GNU Lesser General Public License as published
    by the Free Software Foundation; either version 3 of the License, or (at
    your option) any later version.

    This library is distributed in the hope that it will be useful, but WITHOUT
    ANY WARRANTY; with out even the implied warranty of MERCHANTABILITY or
    FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
    License for more details.

    You should have received a copy of the GNU Lesser General Public License
    along with this library; if not, write to the Free Software Foundation,
    Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.

    http://www.fsf.org/licensing/licenses/lgpl.html

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.cristalise</groupId>
    <artifactId>cristalise</artifactId>
    <version>6.1-SNAPSHOT</version>
  </parent>

  <artifactId>cristalise-gui</artifactId>

  <name>CRISTAL-iSE Swing UI</name>
  <description>CRISTAL-iSE default/administration GUI</description>
  <url>https://github.com/cristal-ise/gui</url>
  <licenses>
    <license>
      <name>GNU Library or Lesser General Public License v3 (LGPL3)</name>
      <url>http://www.gnu.org/licenses/lgpl.html</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Andrew Branson</name>
      <email>andrew.branson@cern.ch</email>
      <organization>UWE CCCS</organization>
      <organizationUrl>http://www.cccs.uwe.ac.uk/et/research/cccs</organizationUrl>
      <roles>
        <role>CEO</role>
      </roles>
    </developer>
    <developer>
      <name>Jetendr Shamdasani</name>
      <email>jetendr.shamdasani@cern.ch</email>
      <organization>UWE CCCS</organization>
      <organizationUrl>http://www.cccs.uwe.ac.uk/et/research/cccs</organizationUrl>
      <roles>
        <role>CEO</role>
      </roles>
    </developer>
    <developer>
      <name>Zsolt Kovács</name>
      <email>zs.myth@gmail.com</email>
      <organization>UWE CCCS</organization>
      <organizationUrl>http://www.cccs.uwe.ac.uk/et/research/cccs</organizationUrl>
      <roles>
        <role>Pinky/Brain</role>
      </roles>
    </developer>
  </developers>
  <issueManagement>
    <url>https://github.com/cristal-ise/gui/issues</url>
    <system>GitHub</system>
  </issueManagement>
  <organization>
    <name>CRISTAL-iSE</name>
    <url>http://cristal-ise.github.io/</url>
  </organization>
  <ciManagement>
    <system>Jenkins</system>
    <url>https://travis-ci.org/cristal-ise/gui</url>
  </ciManagement>
  <scm>
    <developerConnection>scm:https://github.com/cristal-ise/gui.git</developerConnection>
    <url>https://github.com/cristal-ise/gui</url>
    <tag>master</tag>
  </scm>
  <mailingLists>
    <mailingList>
      <name>User List</name>
      <post>cristal-users@cern.ch</post>
      <subscribe>cristal-users-subscribe@cern.ch</subscribe>
      <unsubscribe>cristal-users-unsubscribe@cern.ch</unsubscribe>
      <archive>https://groups.cern.ch/group/cristal-users/default.aspx</archive>
    </mailingList>
  </mailingLists>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.deploy.skip>false</maven.deploy.skip>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.cristalise</groupId>
      <artifactId>cristalise-kernel</artifactId>
      <version>${project.parent.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fifesoft</groupId>
      <artifactId>rsyntaxtextarea</artifactId>
      <version>2.5.8</version>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <targetPath>META-INF/cristal</targetPath>
        <filtering>true</filtering>
        <includes>
          <include>module.xml</include>
        </includes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <targetPath>org/cristalise/gui/resources</targetPath>
        <excludes>
          <exclude>module.xml</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>pom.xml</exclude>
            <exclude>.flattened-pom.xml</exclude>
            <exclude>**/*LICENSE</exclude>
            <exclude>**/*.gpg.enc</exclude>
            <exclude>**/*.launch</exclude>
            <exclude>**/*.example</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>docker</id>
      <dependencies>
        <dependency>
          <groupId>org.cristalise</groupId>
          <artifactId>cristalise-jooqdb</artifactId>
          <version>${project.parent.version}</version>
        </dependency>
        <dependency>
          <groupId>org.postgresql</groupId>
          <artifactId>postgresql</artifactId>
        </dependency>
        <dependency>
          <groupId>ch.qos.logback</groupId>
          <artifactId>logback-classic</artifactId>
        </dependency>
        <dependency>
          <groupId>org.codehaus.janino</groupId>
          <artifactId>janino</artifactId>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>com.google.cloud.tools</groupId>
            <artifactId>jib-maven-plugin</artifactId>
            <configuration>
              <from>
                <image>${docker-from-image}</image>
              </from>
              <to>
                <image>cristalise/swingui:${project.parent.version}</image>
              </to>
              <container>
                <creationTime>${maven.build.timestamp}</creationTime>
                <environment>
                  <APP_NAME>${project.artifactId}</APP_NAME>
                </environment>
                <jvmFlags>
                  <jvmFlag>-Dlogback.configurationFile=/app/config/logback.xml</jvmFlag>
                  <jvmFlag>-DAPP_NAME=${project.artifactId}</jvmFlag>
                  <jvmFlag>-Xms1024m</jvmFlag>
                  <jvmFlag>-Xdebug</jvmFlag>
                </jvmFlags>
                <mainClass>org.cristalise.kernel.process.StandardServer</mainClass>
                <args>
                  <arg>-config</arg>
                  <arg>/app/config/client.conf</arg>
                  <arg>-connect</arg>
                  <arg>/app/config/local.clc</arg>
                  <arg>-Shiro.iniFile</arg>
                  <arg>/app/config/shiro.ini</arg>
                </args>
                <volumes>
                  <volume>/app/config</volume>
                  <volume>/app/log</volume>
                </volumes>
              </container>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
